--- a/AngularApp/src/app/pages/user/user-search/user-search.component.html
+++ b/AngularApp/src/app/pages/user/user-search/user-search.component.html
@@ -7,11 +7,11 @@
 <div class="container cards">
     <app-card *ngFor="let i of res"
         img="./../../../assets/img/no-image-avabliable.jpg"
-        title="{{i.naziv}}"
-        description="{{i.grad}}"
-        btn_text1="Lijekovi"
-        btn_link1="/lijekovi"
+        [title]="i.naziv"
+        [description]="i.grad"
+        [btn_text1]="(i.tipUstanove == 'apoteka') ? ('Lijekovi') : ('Ljekari')"
+        [btn_link1]="(i.tipUstanove == 'apoteka') ? ('/lijekovi/' + i.ustanovaId) : ('/ljekari/' + i.ustanovaId)"
         btn_text2="Detalji"
-        btn_link2="/pretrazi/{{i.ustanovaId}}"
+        [btn_link2]="'/pretrazi/' + i.ustanovaId"
     ></app-card>
 </div>
