--- a/AngularApp/src/app/components/modal/modal.component.css
+++ b/AngularApp/src/app/components/modal/modal.component.css
@@ -8,12 +8,15 @@
 .modal-header, .modal-footer {
     border: none !important;
 }
-.btn-close {
-    font-size: 13px;
-}
 .modal-content {
     padding: 10px;
 }
+.modal-title {
+    color: black;
+}
 .modal-footer {
     margin-top: -5px;
+}
+.btn-close {
+    font-size: 13px;
 }
