--- a/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
+++ b/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
@@ -2,18 +2,16 @@
   <div class="my-5 main">
     <div class="items">
       <h4>Vaša korpa</h4>
-      <p>Trenutno imate {{ countOrders() }} lijekova za poručiti</p>
+      <p>Trenutno imate {{ narudzbe.length }} lijekova za poručiti</p>
       <hr>
-      <div *ngFor="let i of narudzbe">
-        <app-item-list *ngIf="i.odobreno == false"
-          [name]="i.nazivLijeka"
-          [description]="i.opisLijeka"
-          [price]="i.cijenaLijeka + 'KM'"
-          btnText="Ukloni iz korpe"
-          (btnClick)="removeOrder(i.narudzbaId)"
-        >
-        </app-item-list>
-      </div>
+      <app-item-list *ngFor="let i of narudzbe"
+        [name]="i.nazivLijeka"
+        [description]="i.opisLijeka"
+        [price]="i.cijenaLijeka + 'KM'"
+        btnText="Ukloni iz korpe"
+        (btnClick)="removeOrder(i.narudzbaId)"
+      >
+      </app-item-list>
     </div>
     <div class="card-details card bg-primary mt-4 shadow-lg">
       <div class="card-body">
@@ -21,23 +19,23 @@
         <hr>
         <div class="form-group mb-2">
           <label>Ime i prezime:</label>
-          <input type="text" class="form-control shadow-sm" [value]="korisnik.ime + ' ' + korisnik.prezime">
+          <input type="text" class="form-control shadow-sm" [value]="korisnik.ime + ' ' + korisnik.prezime" readonly>
         </div>
         <div class="form-group mb-2">
           <label>Telefonski broj:</label>
-          <input type="text" class="form-control shadow-sm">
+          <input type="text" class="form-control shadow-sm" readonly>
         </div>
         <div class="form-group mb-2">
           <label>Grad:</label>
-          <input type="text" class="form-control shadow-sm" [value]="korisnik.grad">
+          <input type="text" class="form-control shadow-sm" [value]="korisnik.grad" readonly>
         </div>
         <div class="form-group mb-2">
           <label>Adresa stanovanja:</label>
-          <input type="text" class="form-control shadow-sm" [value]="korisnik.adresa">
+          <input type="text" class="form-control shadow-sm" [value]="korisnik.adresa" readonly>
         </div>
         <div class="form-group mb-2">
           <label>Email adresa:</label>
-          <input type="text" class="form-control shadow-sm" [value]="korisnik.mailAdresa">
+          <input type="text" class="form-control shadow-sm" [value]="korisnik.mailAdresa" readonly>
         </div>
         <hr>
         <div class="card-column">
@@ -45,7 +43,7 @@
           <p class="mb-2">{{ sumPrice() }}KM</p>
         </div>
         <div class="card-column">
-          <p class="mb-2">Dostava:</p>
+          <p class="mb-2">Cijena dostave:</p>
           <p class="mb-2">0KM</p>
         </div>
         <div class="card-column">
