Fixed confirming and deleting for multiple users

--- a/AngularApp/src/app/pages/pharmacy/pharmacy-orders-details/pharmacy-orders-details.component.html
+++ b/AngularApp/src/app/pages/pharmacy/pharmacy-orders-details/pharmacy-orders-details.component.html
@@ -56,7 +56,7 @@
           <app-modal
             *ngIf="showModalDeleteMedicine"
             (closeModal)="showModalDeleteMedicine = false"
-            (onSubmit)="deleteOrder()"
+            (onSubmit)="deleteMedicine()"
           ></app-modal>
           <app-modal
             *ngIf="showModalSubmitForm"
