--- a/AngularApp/src/app/pages/landing-page/landing-page.component.html
+++ b/AngularApp/src/app/pages/landing-page/landing-page.component.html
@@ -3,7 +3,7 @@
         <h3 class="text-center mt-2">Prijavi se</h3>
         <div class="form-group first-input">
             <label>Korisničko ime:</label>
-            <input type="email" class="form-control" name="korisnickoIme" autocomplete="off" ngModel>
+            <input type="email" class="form-control" name="mailAdresa" autocomplete="off" ngModel>
         </div>
         <div class="form-group mt-2">
             <label>Šifra:</label>
