Added showing user details in cart page

--- a/AngularApp/src/app/pages/pharmacy/pharmacy-edit-medicine/pharmacy-edit-medicine.component.html
+++ b/AngularApp/src/app/pages/pharmacy/pharmacy-edit-medicine/pharmacy-edit-medicine.component.html
@@ -17,7 +17,7 @@
                     <label class="form-check-label" for="checkbox">Zahtijeva recept?</label>
                 </div>
                 <button class="btn btn-primary btn-half-block mt-2">Potvrdi</button>
-                <button type="button" (click)="showModal = true" class="btn btn-danger btn-half-block mt-2">Izbrisi Lijek</button>
+                <button type="button" (click)="showModal = true" class="btn btn-danger btn-half-block mt-2">Izbriši Lijek</button>
             </form>
         </div>
     </div>
