--- a/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
+++ b/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
@@ -6,7 +6,7 @@
       <hr>
       <app-item-list *ngFor="let i of narudzbe"
         [name]="i.nazivLijeka"
-        [description]="i.opisLijeka"
+        [description]="i.nazivUstanove"
         [price]="i.cijenaLijeka + 'KM'"
         btnText="Ukloni iz korpe"
         (btnClick)="removeOrder(i.narudzbaId)"
@@ -14,49 +14,51 @@
       </app-item-list>
     </div>
     <div class="card-details card bg-primary mt-4 shadow-lg">
-      <div class="card-body">
-        <h5>Detalji narudžbe</h5>
-        <hr>
-        <div class="form-group mb-2">
-          <label>Ime i prezime:</label>
-          <input type="text" class="form-control shadow-sm" [value]="korisnik.ime + ' ' + korisnik.prezime" readonly>
-        </div>
-        <div class="form-group mb-2">
-          <label>Telefonski broj:</label>
-          <input type="text" class="form-control shadow-sm" readonly>
-        </div>
-        <div class="form-group mb-2">
+      <form #loginForm="ngForm" (submit)="confirmOrder(loginForm.value)">
+        <div class="card-body">
+          <h5>Detalji narudžbe</h5>
+          <hr>
+          <div class="form-group mb-2">
+            <label>Ime i prezime:</label>
+            <input type="text" class="form-control shadow-sm" name="imePrezime" [(ngModel)]="korisnik.imePrezime" autocomplete="off" required>
+          </div>
+          <div class="form-group mb-2">
+            <label>Telefonski broj:</label>
+            <input type="text" class="form-control shadow-sm" name="telefonskiBroj" [(ngModel)]="korisnik.telefonskiBroj" autocomplete="off" required>
+          </div>
           <label>Grad:</label>
-          <input type="text" class="form-control shadow-sm" [value]="korisnik.grad" readonly>
+          <select class="form-select mb-2" name="grad" autocomplete="off" required>
+            <option *ngFor="let i of gradovi" [(ngModel)]="i.gradId">{{ i.naziv }}</option>
+          </select>
+          <div class="form-group mb-2">
+            <label>Adresa stanovanja:</label>
+            <input type="text" class="form-control shadow-sm" name="adresa" [(ngModel)]="korisnik.adresa" autocomplete="off" required ngModel>
+          </div>
+          <div class="form-group mb-2">
+            <label>Email adresa:</label>
+            <input type="text" class="form-control shadow-sm" name="mailAdresa" [(ngModel)]="korisnik.mailAdresa" autocomplete="off" required ngModel>
+          </div>
+          <hr>
+          <div class="card-column">
+            <p class="mb-2">Ukupna cijena lijekova:</p>
+            <p class="mb-2">{{ sumPrice() }}KM</p>
+          </div>
+          <div class="card-column">
+            <p class="mb-2">Cijena dostave:</p>
+            <p class="mb-2">{{ deliveryPrice() }}KM</p>
+          </div>
+          <div class="card-column">
+            <p class="mb-2">Ukupno cijena lijekova i dostave:</p>
+            <p class="mb-2">{{ sumPrice() + deliveryPrice() }}KM</p>
+          </div>
+          <button class="btn btn-primary btn-lg btn-block mt-2">Potvrdi narudžbu</button>
+          <app-modal
+            *ngIf="showModal"
+            (closeModal)="showModal = false"
+            (onSubmit)="loginForm.ngSubmit.emit()"
+          ></app-modal>
         </div>
-        <div class="form-group mb-2">
-          <label>Adresa stanovanja:</label>
-          <input type="text" class="form-control shadow-sm" [value]="korisnik.adresa" readonly>
-        </div>
-        <div class="form-group mb-2">
-          <label>Email adresa:</label>
-          <input type="text" class="form-control shadow-sm" [value]="korisnik.mailAdresa" readonly>
-        </div>
-        <hr>
-        <div class="card-column">
-          <p class="mb-2">Ukupna cijena lijekova:</p>
-          <p class="mb-2">{{ sumPrice() }}KM</p>
-        </div>
-        <div class="card-column">
-          <p class="mb-2">Cijena dostave:</p>
-          <p class="mb-2">0KM</p>
-        </div>
-        <div class="card-column">
-          <p class="mb-2">Ukupno cijena lijekova i dostave:</p>
-          <p class="mb-2">{{ sumPrice() }}KM</p>
-        </div>
-        <button class="btn btn-primary btn-lg btn-block mt-2" (click)="showModal = true">Potvrdi narudžbu</button>
-        <app-modal
-          *ngIf="showModal"
-          (closeModal)="showModal = false"
-          (onSubmit)="confirmOrder()"
-        ></app-modal>
-      </div>
+      </form>
     </div>
   </div>
 </div>
