--- a/AngularApp/src/app/pages/user/user-search-medical-institucions/user-search-medical-institucions.component.html
+++ b/AngularApp/src/app/pages/user/user-search-medical-institucions/user-search-medical-institucions.component.html
@@ -10,7 +10,7 @@
         [title]="i.naziv"
         [description]="i.grad"
         [btn_text1]="(i.tipUstanove == 'apoteka') ? ('Lijekovi') : ('Ljekari')"
-        [btn_link1]="(i.tipUstanove == 'apoteka') ? ('/lijekovi/' + i.ustanovaId) : ('/ljekari/' + i.ustanovaId)"
+        [btn_link1]="(i.tipUstanove == 'apoteka') ? ('/pretrazi/lijekovi/' + i.ustanovaId) : ('/pretrazi/ljekari/' + i.ustanovaId)"
         btn_text2="Detalji"
         [btn_link2]="'/pretrazi/' + i.ustanovaId"
     ></app-card>
