Fixed cart confirm order and order details

--- a/AngularApp/src/app/pages/landing-page/landing-page.component.html
+++ b/AngularApp/src/app/pages/landing-page/landing-page.component.html
@@ -31,7 +31,7 @@
                 <form>
                     <div class="form-group">
                         <label for="verificationCode">Enter the verification code received in your email:</label>
-                        <input type="text" class="form-control" id="verificationCode" name="verificationCode" ngModel required>
+                        <input type="text" class="form-control" id="verificationCode" name="verificationCode" ngModel spellcheck="false" autocomplete="off" required>
                     </div>
                     <button type="submit" class="btn btn-primary">Verify</button>
                 </form>
